# rules_lean

./: AGENTS.md  BUILD.bazel  MODULE.bazel  README.md  rivet.yaml
.github/workflows/: ci.yml
aeneas/: BUILD.bazel  defs.bzl  extensions.bzl  toolchain.bzl
aeneas/private/: aeneas.bzl  charon.bzl  charon_repo.bzl  repo.bzl
artifacts/: architecture.yaml  features.yaml  requirements.yaml  safety.yaml
docs/: charon-integration.md  getting-started.md  stpa-overview.md
docs/superpowers/plans/: 2026-03-17-enforce-sha256-verification.md
examples/hello_lean/: BUILD.bazel  Hello.lean  MODULE.bazel
examples/mathlib_proof/: BUILD.bazel  MODULE.bazel  NatProofs.lean
examples/multi_file/: BUILD.bazel  Defs.lean  Props.lean
examples/real_proof/: BUILD.bazel  MODULE.bazel  RealProofs.lean
lean/: defs.bzl  extensions.bzl  toolchain.bzl
lean/private/: lean.bzl  mathlib_fetch.bzl  repo.bzl
tests/charon_llbc/: BUILD.bazel  HelloProofs.lean  MODULE.bazel
tests/charon_llbc/src/: lib.rs
tests/charon_smoke/: BUILD.bazel  MODULE.bazel  charon_version_smoke.sh
tests/charon_validator/: README.md  run.sh
tests/dev_mode/: MODULE.bazel
tests/missing_hash/: BUILD.bazel  MODULE.bazel
tests/platform_hashes/: BUILD.bazel  MODULE.bazel
tests/relay_coverage/: BUILD.bazel  MODULE.bazel
tests/relay_coverage/src/: lib.rs
tests/version_skew/: BUILD.bazel  MODULE.bazel
