module(
    name = "mathlib_proof",
    version = "0.0.0",
)

bazel_dep(name = "rules_lean", version = "0.1.0")
local_path_override(
    module_name = "rules_lean",
    path = "../..",
)

lean = use_extension("@rules_lean//lean:extensions.bzl", "lean")
lean.toolchain(version = "4.29.1")
lean.mathlib(rev = "v4.29.1")

use_repo(lean, "lean_toolchains", "mathlib")
register_toolchains("@lean_toolchains//:all")
