load("@rules_lean//aeneas:defs.bzl", "charon_llbc")

# Translate the tiny Rust crate to LLBC via Charon.
charon_llbc(
    name = "hello_llbc",
    srcs = ["src/lib.rs"],
    crate_name = "hello",
    crate_root = "src/lib.rs",
)

# Build-time assertion: the .llbc output exists and is non-empty. Usable in
# environments where `bazel test` isn't permitted (see tests/charon_smoke
# for the same pattern).
genrule(
    name = "hello_llbc_check",
    srcs = [":hello_llbc"],
    outs = ["hello_llbc_check.stamp"],
    cmd = """
set -euo pipefail
LLBC=$(SRCS)
if [ ! -s "$$LLBC" ]; then
    echo "ERROR: expected non-empty llbc at $$LLBC" >&2
    exit 1
fi
SIZE=$$(wc -c < "$$LLBC")
echo "charon_llbc produced $$LLBC ($$SIZE bytes)"
echo "OK $$SIZE" > $@
""",
    testonly = True,
)
