load("@rules_lean//aeneas:defs.bzl", "aeneas_translate", "charon_llbc")
load("@rules_lean//lean:defs.bzl", "lean_library")

# Translate the tiny Rust crate to LLBC via Charon.
charon_llbc(
    name = "hello_llbc",
    srcs = ["src/lib.rs"],
    crate_name = "hello",
    crate_root = "src/lib.rs",
)

# Build-time assertion: the .llbc output exists and is non-empty. Usable in
# environments where `bazel test` isn't permitted (see tests/charon_smoke
# for the same pattern).
genrule(
    name = "hello_llbc_check",
    srcs = [":hello_llbc"],
    outs = ["hello_llbc_check.stamp"],
    cmd = """
set -euo pipefail
LLBC=$(SRCS)
if [ ! -s "$$LLBC" ]; then
    echo "ERROR: expected non-empty llbc at $$LLBC" >&2
    exit 1
fi
SIZE=$$(wc -c < "$$LLBC")
echo "charon_llbc produced $$LLBC ($$SIZE bytes)"
echo "OK $$SIZE" > $@
""",
    testonly = True,
)

# Level 1: translate the LLBC to a single Lean 4 module via the Aeneas binary.
aeneas_translate(
    name = "hello_lean",
    srcs = [":hello_llbc"],
)

# Build-time assertion: aeneas emitted a non-empty .lean module.
genrule(
    name = "hello_lean_check",
    srcs = [":hello_lean"],
    outs = ["hello_lean_check.stamp"],
    cmd = """
set -euo pipefail
LEAN=$(SRCS)
if [ ! -s "$$LEAN" ]; then
    echo "ERROR: aeneas_translate produced an empty .lean module at $$LEAN" >&2
    exit 1
fi
echo "aeneas_translate produced $$LEAN ($$(wc -c < "$$LEAN") bytes)"
echo "OK" > $@
""",
    testonly = True,
)

# Level 2: COMPILE the translated Lean against the Aeneas support library.
# This kernel-checks that the translation elaborates — the bridge from
# "translates Rust" to "compiles the Rust model in Lean" (closes the
# translate->compile gap modelled on rules_rocq_rust's rocq_library).
lean_library(
    name = "hello_compiled",
    srcs = [":hello_lean"],
    deps = ["@aeneas_lean_lib//:Aeneas"],
)
