module(name = "test_charon_llbc", version = "0.0.0")

bazel_dep(name = "rules_lean", version = "0.1.0")
local_path_override(
    module_name = "rules_lean",
    path = "../..",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_shell", version = "0.3.0")

aeneas = use_extension("@rules_lean//aeneas:extensions.bzl", "aeneas")
aeneas.charon_toolchain(
    version = "build-2026.04.22.081730-2d35584fb79ef804c50f106d8c40bd3728284f8d",
)

# Aeneas binary toolchain (LLBC -> Lean). DEV-MODE pin (no sha256 yet):
#   - version/rev: aeneas build-2026.04.22 — same day as the charon pin above,
#     so the LLBC formats line up.
#   - lean_version 4.28.0-rc1 is what this aeneas's backends/lean/lean-toolchain
#     requires (Aeneas tracks bleeding-edge Lean; rules_lean only stably pins
#     4.27.0/4.29.1, so the Lean lib build uses this RC directly).
# Pin sha256 hashes once the end-to-end build is confirmed green.
aeneas.toolchain(
    version = "build-2026.04.22.084123-1a8946778f0934266d63564c2aac74ec1fff4b68",
    rev = "1a8946778f0934266d63564c2aac74ec1fff4b68",
    lean_version = "4.28.0-rc1",
)

use_repo(
    aeneas,
    "charon_toolchains",
    "charon_macos_aarch64",
    "charon_macos_x86_64",
    "charon_linux_x86_64",
    "charon_linux_aarch64",
    "aeneas_toolchains",
    "aeneas_macos_aarch64",
    "aeneas_macos_x86_64",
    "aeneas_linux_x86_64",
    "aeneas_lean_lib",
)

# Lean toolchain to COMPILE the aeneas-translated Lean + write proofs against it.
# Must match @aeneas_lean_lib's lean_version (4.28.0-rc1) so the oleans are
# compatible. Dev-mode (require_hashes=False) since rules_lean stably pins only
# 4.27.0/4.29.1 — this RC is downloaded directly.
lean = use_extension("@rules_lean//lean:extensions.bzl", "lean")
lean.toolchain(
    version = "4.28.0-rc1",
    require_hashes = False,
)
use_repo(lean, "lean_toolchains")

register_toolchains(
    "@charon_toolchains//:all",
    "@aeneas_toolchains//:all",
    "@lean_toolchains//:all",
)
