# Host-specific aliases so the sh_test can reference a single label. The
# charon_<platform> repositories are all materialised (including the
# linux_aarch64 stub which fails at runtime with a clear error), but a
# config_setting selects the binary matching the exec platform.

alias(
    name = "charon_bin",
    actual = select({
        "@platforms//cpu:aarch64": select({
            "@platforms//os:macos": "@charon_macos_aarch64//:charon_bin",
            "@platforms//os:linux": "@charon_linux_aarch64//:charon_bin",
        }),
        "@platforms//cpu:x86_64": select({
            "@platforms//os:macos": "@charon_macos_x86_64//:charon_bin",
            "@platforms//os:linux": "@charon_linux_x86_64//:charon_bin",
        }),
    }),
)

alias(
    name = "charon_all_files",
    actual = select({
        "@platforms//cpu:aarch64": select({
            "@platforms//os:macos": "@charon_macos_aarch64//:all_files",
            "@platforms//os:linux": "@charon_linux_aarch64//:all_files",
        }),
        "@platforms//cpu:x86_64": select({
            "@platforms//os:macos": "@charon_macos_x86_64//:all_files",
            "@platforms//os:linux": "@charon_linux_x86_64//:all_files",
        }),
    }),
)

sh_test(
    name = "charon_version_smoke",
    srcs = ["charon_version_smoke.sh"],
    data = [
        ":charon_bin",
        ":charon_all_files",
    ],
    args = ["$(rootpath :charon_bin)"],
)
